--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,6 +3,20 @@ entries:
   ocpp:
   - apiVersion: v2
     appVersion: _VERSION_RELEASE_
+    created: "2021-08-28T20:23:45.773677459Z"
+    description: A Helm chart for Kubernetes
+    digest: ffe5398c0810b6de8a77bb929d7efc235b43df729adbe07bb42ed93c8c613d18
+    home: https://github.com/ElectromapsSL/ocpp
+    icon: https://pbs.twimg.com/profile_images/1346477894533464066/C8gEbxou.png
+    name: ocpp
+    sources:
+    - https://github.com/ElectromapsSL/ocpp
+    type: application
+    urls:
+    - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.14.tgz
+    version: 0.0.14
+  - apiVersion: v2
+    appVersion: _VERSION_RELEASE_
     created: "2021-08-28T19:13:30.321487982Z"
     description: A Helm chart for Kubernetes
     digest: 4388cbefda4def466a7f3dd57880be4bab17a74c2003b062c7fc2e119d0a75d0
@@ -25,4 +39,4 @@ entries:
     urls:
     - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.12.tgz
     version: 0.0.12
-generated: "2021-08-28T19:13:30.321093964Z"
+generated: "2021-08-28T20:23:45.772962026Z"
