--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,20 @@ apiVersion: v1
 entries:
   ocpp:
   - apiVersion: v2
+    appVersion: 0.0.16
+    created: "2021-08-28T21:19:31.819452054Z"
+    description: A Helm chart for Kubernetes
+    digest: 5f1b0d158cfaf295d445fef908b5f2120cffb3f2be76f2f01c412e22c1269145
+    home: https://github.com/ElectromapsSL/ocpp
+    icon: https://pbs.twimg.com/profile_images/1346477894533464066/C8gEbxou.png
+    name: ocpp
+    sources:
+    - https://github.com/ElectromapsSL/ocpp
+    type: application
+    urls:
+    - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.16.tgz
+    version: 0.0.16
+  - apiVersion: v2
     appVersion: 0.0.15
     created: "2021-08-28T20:37:49.540034672Z"
     description: A Helm chart for Kubernetes
@@ -53,4 +67,4 @@ entries:
     urls:
     - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.12.tgz
     version: 0.0.12
-generated: "2021-08-28T20:37:49.539408858Z"
+generated: "2021-08-28T21:19:31.819018452Z"
