--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,20 @@ apiVersion: v1
 entries:
   ocpp:
   - apiVersion: v2
+    appVersion: 0.0.17
+    created: "2021-08-28T21:45:07.931525933Z"
+    description: A Helm chart for Kubernetes
+    digest: 23ee495d7ca34b7b319fdcca6668a02340a16a74da7afe50c54c7bd1b2d9bb34
+    home: https://github.com/ElectromapsSL/ocpp
+    icon: https://pbs.twimg.com/profile_images/1346477894533464066/C8gEbxou.png
+    name: ocpp
+    sources:
+    - https://github.com/ElectromapsSL/ocpp
+    type: application
+    urls:
+    - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.17.tgz
+    version: 0.0.17
+  - apiVersion: v2
     appVersion: 0.0.16
     created: "2021-08-28T21:19:31.819452054Z"
     description: A Helm chart for Kubernetes
@@ -67,4 +81,4 @@ entries:
     urls:
     - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.12.tgz
     version: 0.0.12
-generated: "2021-08-28T21:19:31.819018452Z"
+generated: "2021-08-28T21:45:07.931004428Z"
