--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,20 @@ apiVersion: v1
 entries:
   ocpp:
   - apiVersion: v2
+    appVersion: 0.0.18
+    created: "2021-08-28T23:04:26.133842916Z"
+    description: A Helm chart for Kubernetes
+    digest: 9960a0a0ca58c8db10368020feccc08ed90f22df191051f80030231c3f6b7106
+    home: https://github.com/ElectromapsSL/ocpp
+    icon: https://pbs.twimg.com/profile_images/1346477894533464066/C8gEbxou.png
+    name: ocpp
+    sources:
+    - https://github.com/ElectromapsSL/ocpp
+    type: application
+    urls:
+    - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.18.tgz
+    version: 0.0.18
+  - apiVersion: v2
     appVersion: 0.0.17
     created: "2021-08-28T21:45:07.931525933Z"
     description: A Helm chart for Kubernetes
@@ -81,4 +95,4 @@ entries:
     urls:
     - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.12.tgz
     version: 0.0.12
-generated: "2021-08-28T21:45:07.931004428Z"
+generated: "2021-08-28T23:04:26.133418108Z"
