--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,20 @@ apiVersion: v1
 entries:
   ocpp:
   - apiVersion: v2
+    appVersion: 0.0.19
+    created: "2021-09-01T12:34:40.645785769Z"
+    description: A Helm chart for Kubernetes
+    digest: e26ee4b8c0d7eb6f2e6642e729ff62917f6bcb8934f71823dad94c746273ba5c
+    home: https://github.com/ElectromapsSL/ocpp
+    icon: https://pbs.twimg.com/profile_images/1346477894533464066/C8gEbxou.png
+    name: ocpp
+    sources:
+    - https://github.com/ElectromapsSL/ocpp
+    type: application
+    urls:
+    - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.19.tgz
+    version: 0.0.19
+  - apiVersion: v2
     appVersion: 0.0.18
     created: "2021-08-28T23:04:26.133842916Z"
     description: A Helm chart for Kubernetes
@@ -95,4 +109,4 @@ entries:
     urls:
     - https://raw.githubusercontent.com/Cosmic-Chimps/test-helm/master/charts/ocpp-0.0.12.tgz
     version: 0.0.12
-generated: "2021-08-28T23:04:26.133418108Z"
+generated: "2021-09-01T12:34:40.645297966Z"
